small changes in html, started css and fixed issues with gulfile

--- a/index.html
+++ b/index.html
@@ -6,23 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="./dist/main.css">
+    <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <title>OSF Academy</title>
 </head>
 <body>
-    <header>
-            <div class="header-logo"></div>
-            <nav>
-                <ul class="header-nav">
-                    <li>SERVICES</li>
-                    <li>COMPANY</li>
-                    <li>LIBRARY</li>
-                    <li>CONTACT US</li>
-                    <li>EN</li>
-                    <li>&#36; US</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+    <header class="container">
+            <div class="header-logo">
+                <a href="#"><img src="" alt=""><img src="./images/logo.png" alt="logo"></a>
+            </div>
+            <nav class="header-nav">
+                    <div>
+                        <button>
+                            <span>SERVICES</span>
+                            <i class="fas fa-sort-down"></i>
+                        </button>
+                    </div>
+                    <a>COMPANY</a>
+                    <a>LIBRARY</a>
+                    <a>CONTACT US</a>
+                    <div>
+                        <span>EN</span>
+                        <i class="fas fa-sort-down"></i>
+                    </div>
+                    <div>
+                        <span>&#36; US</span>
+                        <i class="fas fa-sort-down"></i>
+                    </div>
+                    <i class="fas fa-search"></i>
+                    <i class="far fa-user"></i>
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-shopping-bag"></i>
                 </ul>
             </nav>
     </header>
