finished with dropdown list

--- a/index.html
+++ b/index.html
@@ -21,28 +21,77 @@
                 <a href="#"><img src="./images/logo.png" alt="logo"></a>
             </div>
             <nav class="header-nav">
-                    <div class="nav-item">
-                        <span class="nav-item-active">SERVICES
-                            <span class="separator"></span>
-                            <i class="fas fa-sort-down"></i>
-                        </span>
+                <div class="nav-item dropdown">
+                    <div class="dropbtn">
+                        SERVICES
+                        <span class="separator"></span>
+                        <i class="fas fa-sort-down arrow"></i>
                     </div>
-                    <a href="#" class="nav-item">COMPANY</a>
-                    <a href="#" class="nav-item">LIBRARY</a>
-                    <a href="#" class="nav-item">CONTACT US</a>
-                    <a href="#" class="nav-item">
-                        <span>EN</span><span class="separator"></span>
-                        <i class="fas fa-sort-down"></i>
-                    </a>
-                    <a href="#" class="nav-item">
-                        <span>&#36; US</span><span class="separator"></span>
-                        <i class="fas fa-sort-down"></i>
-                    </a>
-                    <i class="fas fa-search nav-item"></i>
-                    <i class="far fa-user nav-item"></i>
-                    <i class="far fa-heart nav-item"></i>
-                    <i class="fas fa-shopping-bag nav-item"></i>
-                </ul>
+                    <div class="dropdown-content">
+                        <div class="dropdown-container">
+                            <strong>SALE</strong>
+                            <a href="#">Accessories</a>
+                            <a href="#">Alcohol</a>
+                            <a href="#">Art</a>
+                            <a href="#">Books</a>
+                            <a href="#">Drink</a>
+                            <a href="#">Electronics</a>
+                            <a href="#">Flowers & Plants</a>
+                            <a href="#">Food</a>
+                        </div>
+                        <div class="dropdown-container">
+                            <span>&#8195;</span>
+                            <a href="#">Gadgets</a>
+                            <a href="#">Garden</a>
+                            <a href="#">Grocery</a>
+                            <a href="#">Home</a>
+                            <a href="#">Jewelry</a>
+                            <a href="#">Kids & Baby</a>
+                            <a href="#">Men's Fashion</a>
+                            <a href="#">Mobile</a>
+                        </div>
+                        <div class="dropdown-container">
+                            <span>&#8195;</span>
+                            <a href="#">Motorcycles</a>
+                            <a href="#">Movies</a>
+                            <a href="#">Music</a>
+                            <a href="#">Office</a>
+                            <a href="#">Pets</a>
+                            <a href="#">Romantic</a>
+                            <a href="#">Sport</a>
+                            <a href="#">Toys</a>
+                        </div>
+                        <div class="dropdown-container">
+                            <strong>PRODUCT CATEGORIES</strong>
+                            <a href="#">Accessories</a>
+                            <a href="#">Alcohol</a>
+                            <a href="#">Art</a>
+                            <a href="#">Books</a>
+                            <a href="#">Drink</a>
+                            <a href="#">Electronics</a>
+                            <a href="#">Flowers & Plants</a>
+                            <a href="#">Food</a>
+                        </div>
+                        <div class="drowdown-img">
+                            <img src="./images/girl with sunglasses.png" alt="girl with sunglasses">
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="nav-item">COMPANY</a>
+                <a href="#" class="nav-item">LIBRARY</a>
+                <a href="#" class="nav-item">CONTACT US</a>
+                <a href="#" class="nav-item">
+                    <span>EN</span><span class="separator"></span>
+                    <i class="fas fa-sort-down arrow"></i>
+                </a>
+                <a href="#" class="nav-item">
+                    <span>&#36; US</span><span class="separator"></span>
+                    <i class="fas fa-sort-down arrow"></i>
+                </a>
+                <i class="fas fa-search nav-item"></i>
+                <i class="far fa-user nav-item"></i>
+                <i class="far fa-heart nav-item"></i>
+                <i class="fas fa-shopping-bag nav-item"></i>
             </nav>
     </header>
     <main></main>
