--- a/index.html
+++ b/index.html
@@ -88,13 +88,44 @@
                     <span>&#36; US</span><span class="separator"></span>
                     <i class="fas fa-sort-down arrow"></i>
                 </a>
-                <i class="fas fa-search nav-item"></i>
-                <i class="far fa-user nav-item"></i>
-                <i class="far fa-heart nav-item"></i>
-                <i class="fas fa-shopping-bag nav-item"></i>
+                <div class="icons-block">
+                    <i class="fas fa-search nav-item"></i>
+                    <i class="far fa-user nav-item"></i>
+                    <i class="far fa-heart nav-item"></i>
+                    <i class="fas fa-shopping-bag nav-item"></i>
+                </div>
             </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="slider-block">
+            <div class="slider-left">
+                <h1>Control and manage any<br> device with cloud solutions</h1>
+                <p>Improve business perfomance and user experience<br> with the right mix of IoT technology and processes</p>
+                <button>VIEW MORE</button>
+                <div class="pagination-wrapper">
+                    <div class="pagination">
+                      <span class="active"></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                    </div>
+                  </div>
+            </div>
+            <div class="slider-right">
+                <div class="sales-block">
+                    <span>55%</span>
+                    <div>Summer<br>sales</div>
+                </div>
+                <h3>Follow us on Facebook</h3>
+                <p>Sed ut perspiciatis unde omnis iste<br> natus error sit</p>
+                <button><img src="./images/f.png" alt="facebook logo">FOLLOW</button>
+            </div>
+        </div>
+        
+    </main>
     <footer></footer>
+
+    <script src="./script.js"></script>
 </body>
 </html>
