working on homepage

--- a/index.html
+++ b/index.html
@@ -107,8 +107,6 @@
                       <span class="active"></span>
                       <span></span>
                       <span></span>
-                      <span></span>
-                      <span></span>
                     </div>
                   </div>
             </div>
@@ -117,14 +115,97 @@
                     <span>55%</span>
                     <div>Summer<br>sales</div>
                 </div>
-                <h3>Follow us on Facebook</h3>
-                <p>Sed ut perspiciatis unde omnis iste<br> natus error sit</p>
+                <div>
+                    <h3>Follow us on Facebook</h3>
+                    <p>Sed ut perspiciatis unde omnis iste<br> natus error sit</p>
+                </div>
                 <button><img src="./images/f.png" alt="facebook logo">FOLLOW</button>
             </div>
         </div>
-        
+        <div class="products">
+
+        </div>
+        <div class="banner">
+            <h2>Banner OSF Theme</h2>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit volup-<br>tatem accusantium</p>
+        </div>
+        <div class="latest-posts">
+
+        </div>
+        <div class="services">
+            <div class="service-block">
+                <img src="./images/Delivery Packages On A Trolley. Attribute as Freepik from Flaticon.com.png" alt="Delivery Packages On A Trolley">
+                <div>
+                    <h3>FOCUS</h3>
+                    <p>Our unwavering focus on superior service delivery and building next generation competencies</p>
+                </div>
+            </div>
+            <div class="service-block">
+                <img src="./images/Triangular Arrows Sign For Recycle. Attribute as Freepik from Flaticon.com.png" alt="Triangular Arrows Sign For Recycle">
+                <div>
+                    <h3>METHOD</h3>
+                    <p>A standarlized methodology designed to deliver measurable business results and predictable costs</p>
+                </div>
+            </div>
+            <div class="service-block">
+                <img src="./images/Clipboard Verification Symbol. Attribute as Freepik from Flaticon.com.png" alt="Clipboard Verification Symbol">
+                <div>
+                    <h3>KNOWLEDGE</h3>
+                    <p>A highly skilled, proactive workforce that reliable improves each client's ROI while mitigating their business risk</p>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="copyright">
+            <p>&#169; Copyright <span></span>.<br> All Rights Reserved.</p>
+            <h3>CONTACT</h3>
+            <p>Headquarters: 5600, Blvd. des Galeries, Bur 530 Quebec, Quebec G2K 2H6</p>
+            <a href="">contact@osf-global.com</a>
+            <a href="">+1 (888) 548-4344</a>
+        </div>
+        <div class="sitemap">
+            <div>
+                <strong>CATEGORIES</strong>
+                <a href="">Alcohol</a>
+                <a href="">Art</a>
+                <a href="">Books</a>
+                <a href="">Drink</a>
+                <a href="">Electronics</a>
+            </div>
+            <div>
+                <span>&#8195;</span>
+                <a href="">Home</a>
+                <a href="">Jewelry</a>
+                <a href="">Kids & Baby</a>
+                <a href="">Men's Fashion</a>
+                <a href="">Mobile</a>
+                <a href="">Motorcycles</a>
+                <a href="">Movies</a>
+                <a href="">Music</a>
+            </div>
+            <div>
+                <span>&#8195;</span>
+                <a href="">Sport</a>
+                <a href="">Toys</a>
+                <a href="">Travel</a>
+                <a href="">Women's Fashion</a>
+            </div>
+            <div>
+                <strong>ABOUT</strong>
+                <a href="">About us</a>
+                <a href="">Delivery</a>
+                <a href="">Testimonials</a>
+                <a href="">Contact</a>
+            </div>
+        </div>
+        <div class="social">
+            <a href=""><i class="fab fa-facebook-f"></i></a>
+            <a href=""><i class="fab fa-google-plus-g"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-pinterest-p"></i></a>
+        </div>
+    </footer>
 
     <script src="./script.js"></script>
 </body>
