finishing on home page

--- a/index.html
+++ b/index.html
@@ -119,19 +119,67 @@
                     <h3>Follow us on Facebook</h3>
                     <p>Sed ut perspiciatis unde omnis iste<br> natus error sit</p>
                 </div>
-                <button><img src="./images/f.png" alt="facebook logo">FOLLOW</button>
+                <button><i class="fab fa-facebook-f"><span class="separator"></span></i><span>FOLLOW</span></span></button>
             </div>
         </div>
-        <div class="products">
-
+        <div class="products-block">
+            <h2>Popular Items</h2>
+            <div class="items">
+                <div class="item" id="item-1">
+                    <div class="img"></div>
+                    <h4>Kristina Dam Oak Table With White Marble Top</h4>
+                    <span>&#36; 799.55</span>
+                </div>
+                <div class="item" id="item-2">
+                    <div class="img"></div>
+                    <h4>Hay - About A lounge Chair AAL 93</h4>
+                    <span>&#36; 659.55</span>
+                </div>
+                <div class="item" id="item-3">
+                    <div class="img"></div>
+                    <h4>Activate Facial Mask and Charcoal Soap</h4>
+                    <span>&#36; 129.55</span>
+                </div>
+                <div class="item" id="item-4">
+                    <div class="img"></div>
+                    <h4>Cocktail Table Walnut | YES</h4>
+                    <span>&#36; 299.99</span>
+                </div>
+                <div class="item" id="item-5">
+                    <div class="img"></div>
+                    <h4>Hay - About A lounge Chair AAL 93</h4>
+                    <span>&#36; 659.55</span>
+                </div>
+                <div class="item" id="item-6">
+                    <div class="img"></div>
+                    <h4>TORY DESK CALENDAR</h4>
+                    <span>&#36; 410.99</span>
+                </div>
+                <div class="item" id="item-7">
+                    <div class="img"></div>
+                    <h4>CH445 Wing Chair on SUITE NY</h4>
+                    <span>&#36; 330.55</span>
+                </div>
+                <div class="static-item">
+                    <div>
+                        <p>My dragons are misbehaving again. Unbelieveable!</p>
+                        <p><img src="./images/user.png" alt="">5H AGO</p>
+                    </div>
+                </div>
+            </div>
+            <div></div>
+            <button><span>LOAD MORE</span><span class="separator"></span><i class="fas fa-undo-alt"></i></button>
         </div>
+
         <div class="banner">
             <h2>Banner OSF Theme</h2>
             <p>Sed ut perspiciatis unde omnis iste natus error sit volup-<br>tatem accusantium</p>
         </div>
+
         <div class="latest-posts">
 
         </div>
+
         <div class="services">
             <div class="service-block">
                 <img src="./images/Delivery Packages On A Trolley. Attribute as Freepik from Flaticon.com.png" alt="Delivery Packages On A Trolley">
@@ -160,13 +208,15 @@
         <div class="copyright">
             <p>&#169; Copyright <span></span>.<br> All Rights Reserved.</p>
             <h3>CONTACT</h3>
-            <p>Headquarters: 5600, Blvd. des Galeries, Bur 530 Quebec, Quebec G2K 2H6</p>
-            <a href="">contact@osf-global.com</a>
-            <a href="">+1 (888) 548-4344</a>
+            <div>
+                <p>Headquarters:<br> 5600, Blvd. des Galeries, Bur 530 Quebec, Quebec G2K 2H6</p>
+                <a href="">contact@osf-global.com</a>
+                <a href="">+1 (888) 548-4344</a>
+            </div>
         </div>
         <div class="sitemap">
             <div>
-                <strong>CATEGORIES</strong>
+                <span>CATEGORIES</span>
                 <a href="">Alcohol</a>
                 <a href="">Art</a>
                 <a href="">Books</a>
@@ -192,7 +242,7 @@
                 <a href="">Women's Fashion</a>
             </div>
             <div>
-                <strong>ABOUT</strong>
+                <span>ABOUT</span>
                 <a href="">About us</a>
                 <a href="">Delivery</a>
                 <a href="">Testimonials</a>
