--- a/home.html
+++ b/home.html
@@ -30,11 +30,11 @@
                     <div class="dropdown-content">
                         <div class="dropdown-container">
                             <strong>SALE</strong>
-                            <a href="#">Accessories</a>
-                            <a href="#">Alcohol</a>
+                            <a href="1">Accessories</a>
+                            <a href="">Alcohol</a>
                             <a href="#">Art</a>
                             <a href="#">Books</a>
-                            <a href="#">Drink</a>
+                            <a href="">Drink</a>
                             <a href="#">Electronics</a>
                             <a href="#">Flowers & Plants</a>
                             <a href="#">Food</a>
