--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 <body>
     <header class="container">
             <div class="header-logo">
-                <a href="#"><img src="./images/logo.png" alt="logo"></a>
+                <a href="./home.html"><img src="./images/logo.png" alt="logo"></a>
             </div>
             <nav class="header-nav">
                 <div class="nav-item dropdown">
@@ -99,16 +99,23 @@
             </nav>
     </header>
     <main>
-        <div class="breadcrumbs"></div>
+        <div class="breadcrumbs">
+            <a href="./home.html">Home</a> / <span>404</span>
+        </div>
         <h2>404</h2>
-        <div>
-            <div class="oops">Oops!</div>
-            <div>
-                <h3></h3>
-                <p></p>
-                <a href=""></a>
-                <h3></h3>
-                <input type="text" name="" id="">
+        <div class="main-block">
+            <div class="oops"></div>
+            <span>Oops!</span>
+            <div class="right-to-oops">
+                <h3>Sorry, this page could not be found!</h3>
+                <p>Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus at magnis dis parturient montes, nascetur ridiculus mus.<br>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                <a href="./home.html">Go back to Homepage</a>
+                <h3>Search our site</h3>
+                <div class="input">
+                    <i class="fas fa-search"></i>
+                    <input type="text" name="" id="" placeholder="         SEARCH">
+                </div>
             </div>
         </div>
     </main>
