--- a/home.html
+++ b/home.html
@@ -30,64 +30,82 @@
                     <div class="dropdown-content">
                         <div class="dropdown-container">
                             <strong>SALE</strong>
-                            <a href="1">Accessories</a>
-                            <a href="">Alcohol</a>
-                            <a href="#">Art</a>
-                            <a href="#">Books</a>
-                            <a href="">Drink</a>
-                            <a href="#">Electronics</a>
-                            <a href="#">Flowers & Plants</a>
-                            <a href="#">Food</a>
+                            <a href="id=a1">Accessories</a>
+                            <a href="id=a2">Alcohol</a>
+                            <a href="id=a3">Art</a>
+                            <a href="id=a4">Books</a>
+                            <a href="id=a5">Drink</a>
+                            <a href="id=a6">Electronics</a>
+                            <a href="id=a7">Flowers & Plants</a>
+                            <a href="id=a8">Food</a>
                         </div>
                         <div class="dropdown-container">
                             <span>&#8195;</span>
-                            <a href="#">Gadgets</a>
-                            <a href="#">Garden</a>
-                            <a href="#">Grocery</a>
-                            <a href="#">Home</a>
-                            <a href="#">Jewelry</a>
-                            <a href="#">Kids & Baby</a>
-                            <a href="#">Men's Fashion</a>
-                            <a href="#">Mobile</a>
+                            <a href="id=b1">Gadgets</a>
+                            <a href="id=b2">Garden</a>
+                            <a href="id=b3">Grocery</a>
+                            <a href="id=b4">Home</a>
+                            <a href="id=b5">Jewelry</a>
+                            <a href="id=b6">Kids & Baby</a>
+                            <a href="id=b7">Men's Fashion</a>
+                            <a href="id=b8">Mobile</a>
                         </div>
                         <div class="dropdown-container">
                             <span>&#8195;</span>
-                            <a href="#">Motorcycles</a>
-                            <a href="#">Movies</a>
-                            <a href="#">Music</a>
-                            <a href="#">Office</a>
-                            <a href="#">Pets</a>
-                            <a href="#">Romantic</a>
-                            <a href="#">Sport</a>
-                            <a href="#">Toys</a>
+                            <a href="id=c1">Motorcycles</a>
+                            <a href="id=c2">Movies</a>
+                            <a href="id=c3">Music</a>
+                            <a href="id=c4">Office</a>
+                            <a href="id=c5">Pets</a>
+                            <a href="id=c6">Romantic</a>
+                            <a href="id=c7">Sport</a>
+                            <a href="id=c8">Toys</a>
                         </div>
                         <div class="dropdown-container">
                             <strong>PRODUCT CATEGORIES</strong>
-                            <a href="#">Accessories</a>
-                            <a href="#">Alcohol</a>
-                            <a href="#">Art</a>
-                            <a href="#">Books</a>
-                            <a href="#">Drink</a>
-                            <a href="#">Electronics</a>
-                            <a href="#">Flowers & Plants</a>
-                            <a href="#">Food</a>
+                            <a href="id=a1">Accessories</a>
+                            <a href="id=a2">Alcohol</a>
+                            <a href="id=a3">Art</a>
+                            <a href="id=a4">Books</a>
+                            <a href="id=a5">Drink</a>
+                            <a href="id=a6">Electronics</a>
+                            <a href="id=a7">Flowers & Plants</a>
+                            <a href="id=a8">Food</a>
                         </div>
                         <div class="drowdown-img">
                             <img src="./images/girl with sunglasses.png" alt="girl with sunglasses">
                         </div>
                     </div>
                 </div>
-                <a href="#" class="nav-item">COMPANY</a>
-                <a href="#" class="nav-item">LIBRARY</a>
-                <a href="#" class="nav-item">CONTACT US</a>
-                <a href="#" class="nav-item">
-                    <span>EN</span><span class="separator"></span>
-                    <i class="fas fa-sort-down arrow"></i>
-                </a>
-                <a href="#" class="nav-item">
-                    <span>&#36; US</span><span class="separator"></span>
-                    <i class="fas fa-sort-down arrow"></i>
-                </a>
+                <a href="id=e1" class="nav-item">COMPANY</a>
+                <a href="id=e5" class="nav-item">LIBRARY</a>
+                <a href="id=e4" class="nav-item">CONTACT US</a>
+                <div class="nav-item dropdown-small">
+                    <div class="dropbtn-small">
+                        EN
+                        <span class="separator"></span>
+                        <i class="fas fa-sort-down arrow"></i>
+                    </div>
+                    <div class="dropdown-content-small">
+                        <div class="dropdown-container-small">
+                            <a href="id=es">ES</a>
+                            <a href="id=de">DE</a>
+                            <a href="id=pt">PT</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="nav-item dropdown-small">
+                    <div class="dropbtn-small">
+                        &#36; US
+                        <span class="separator"></span>
+                        <i class="fas fa-sort-down arrow"></i>
+                    </div>
+                    <div class="dropdown-content-small">
+                        <div class="dropdown-container-small">
+                            <a href="id=eu">&#8364; EU</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="icons-block">
                     <i class="fas fa-search nav-item"></i>
                     <i class="far fa-user nav-item"></i>
@@ -291,7 +309,7 @@
     </main>
     <footer>
         <div class="copyright">
-            <p>&#169; Copyright <span></span>.<br> All Rights Reserved.</p>
+            <p>&#169; Copyright <span id="currentYear"></span>.<br> All Rights Reserved.</p>
             <h3>CONTACT</h3>
             <div>
                 <p>Headquarters:<br> 5600, Blvd. des Galeries, Bur 530 Quebec, Quebec G2K 2H6</p>
@@ -302,36 +320,36 @@
         <div class="sitemap">
             <div>
                 <span>CATEGORIES</span>
-                <a href="">Alcohol</a>
-                <a href="">Art</a>
-                <a href="">Books</a>
-                <a href="">Drink</a>
-                <a href="">Electronics</a>
+                <a href="id=a2">Alcohol</a>
+                <a href="id=a3">Art</a>
+                <a href="id=a4">Books</a>
+                <a href="id=a5">Drink</a>
+                <a href="id=a6">Electronics</a>
             </div>
             <div>
                 <span>&#8195;</span>
-                <a href="">Home</a>
-                <a href="">Jewelry</a>
-                <a href="">Kids & Baby</a>
-                <a href="">Men's Fashion</a>
-                <a href="">Mobile</a>
-                <a href="">Motorcycles</a>
-                <a href="">Movies</a>
-                <a href="">Music</a>
+                <a href="id=b4">Home</a>
+                <a href="id=b5">Jewelry</a>
+                <a href="id=b6">Kids & Baby</a>
+                <a href="id=b7">Men's Fashion</a>
+                <a href="id=b8">Mobile</a>
+                <a href="id=c1">Motorcycles</a>
+                <a href="id=c2">Movies</a>
+                <a href="id=c3">Music</a>
             </div>
             <div>
                 <span>&#8195;</span>
-                <a href="">Sport</a>
-                <a href="">Toys</a>
-                <a href="">Travel</a>
-                <a href="">Women's Fashion</a>
+                <a href="id=c7">Sport</a>
+                <a href="id=c8">Toys</a>
+                <a href="id=d1">Travel</a>
+                <a href="id=d2">Women's Fashion</a>
             </div>
             <div>
                 <span>ABOUT</span>
-                <a href="">About us</a>
-                <a href="">Delivery</a>
-                <a href="">Testimonials</a>
-                <a href="">Contact</a>
+                <a href="id=e1">About us</a>
+                <a href="id=e2">Delivery</a>
+                <a href="id=e3">Testimonials</a>
+                <a href="id=e4">Contact</a>
             </div>
         </div>
         <div class="social">
