--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
 
 
     <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <title>OSF Academy</title>
 </head>
@@ -117,22 +118,26 @@
             </nav>
     </header>
     <main>
-        <div id="modal-wrapper" ondblclick="popup()">
+        <div class="modal-wrapper">
             <div class="modal-window">
-                <div class="popup" id="myPopup">
+                <div class="popup">
                     <h2>Sign in</h2>
-                    <div class="labelAndInput">
-                        <label for="email">Email</label>
-                        <input type="email" id="email">
-                    </div>
-                    <div class="labelAndInput">
-                        <label for="password">Lato <a href="id=forgot-psw">forgot password</a></label>
-                        <div class="input">
-                            <i class="far fa-eye" onclick="makeVisible()"></i>
-                            <input type="password" id="password" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&]).{6,}$">
+                    <form action="#">
+                        <div class="labelAndInput">
+                            <label for="email">Email</label>
+                            <input type="email" id="email">
                         </div>
-                    </div>
-                    <button>LOGIN</button>
+                        <div class="labelAndInput">
+                            <label for="password">Lato <a href="id=forgot-psw">forgot password</a></label>
+                            <div class="input">
+                                <i class="far fa-eye"></i>
+                                <input type="password" id="password" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&]).{6,}$"
+                                title="Must contain at least 6 characters length,
+                                contain 1 numeric, 1 uppercase letter, 1 special character" required>
+                            </div>
+                        </div>
+                        <button type="submit">LOGIN</button>
+                    </form>
                     <a href="id=create-acc">I don't have an account</a>
                 </div>
             </div>
@@ -141,7 +146,7 @@
         <div class="breadcrumbs">
             <a href="./index.html">Home</a> / <span>404</span>
         </div>
-        <h2>404</h2>
+        <h2 id="errPage">404</h2>
         <div class="main-block">
             <div class="oops"></div>
             <span>Oops!</span>
