--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/main.css">
 
-    <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" type="text/javascript"></script>
 
     <title>OSF Academy</title>
 </head>
@@ -108,34 +110,50 @@
                 </div>
                 <div class="icons-block">
                     <i class="fas fa-search nav-item"></i>
-                    <i class="far fa-user nav-item" onclick="popup()"></i>
+                    <i class="far fa-user nav-item"></i>
                     <i class="far fa-heart nav-item"></i>
                     <i class="fas fa-shopping-bag nav-item"></i>
                 </div>
             </nav>
     </header>
     <main>
-        <div id="modal-wrapper" ondblclick="popup()">
+        <div class="modal-wrapper">
             <div class="modal-window">
-                <div class="popup" id="myPopup">
+                <div class="popup">
                     <h2>Sign in</h2>
-                    <div class="labelAndInput">
-                        <label for="email">Email</label>
-                        <input type="email" id="email">
-                    </div>
-                    <div class="labelAndInput">
-                        <label for="password">Lato <a href="id=forgot-psw">forgot password</a></label>
-                        <div class="input">
-                            <i class="far fa-eye" onclick="makeVisible()"></i>
-                            <input type="password" id="password" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&]).{6,}$">
+                    <form action="#">
+                        <div class="labelAndInput">
+                            <label for="email">Email</label>
+                            <input type="email" id="email">
                         </div>
-                    </div>
-                    <button>LOGIN</button>
+                        <div class="labelAndInput">
+                            <label for="password">Lato <a href="id=forgot-psw">forgot password</a></label>
+                            <div class="input">
+                                <i class="far fa-eye"></i>
+                                <input type="password" id="password" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&]).{6,}$"
+                                title="Must contain at least 6 characters length,
+                                contain 1 numeric, 1 uppercase letter, 1 special character" required>
+                            </div>
+                        </div>
+                        <button type="submit">LOGIN</button>
+                    </form>
                     <a href="id=create-acc">I don't have an account</a>
                 </div>
             </div>
            <div class="popupOverlay"></div>
         </div>
+
+        <div class="cookieOverlay">
+            <div class="cookieBody">
+                <h3>This website uses cookies</h3>
+                <p>OSF uses its own and third-party cookies for statistical purposes, to know your preferences, for website performance and interaction with social media offering publicity tailored to your interests. If you continue browsing, we consider that you accept its use.
+                    You can expand this information consulting our <a>Cookies Policy Page.</a>
+                </p>
+                <a href="javascript:;" class="close"><i class="fas fa-times"></i></a>
+                <a href="javascript:;" class="submit">ACCEPT</a>
+            </div>
+        </div>
+
         <div class="slider-block">
             <div class="slider-left" id="slider">
                 <h1>Control and manage any<br> device with cloud solutions</h1>
@@ -143,9 +161,9 @@
                 <button>VIEW MORE</button>
                 <div class="pagination-wrapper">
                     <div class="pagination">
-                      <span class="active" id="paginationDefault" onclick="sliderDefault()"></span>
-                      <span id="paginationCentral" onclick="sliderCentral()" ></span>
-                      <span id="paginationRight" onclick="sliderRight()"></span>
+                      <span class="active" id="pagDef"></span>
+                      <span id="pagCentr"></span>
+                      <span id="pagRght"></span>
                     </div>
                   </div>
             </div>
@@ -262,8 +280,77 @@
                     </div>
                 </div>
             </div>
-            <div></div>
-            <button><span>LOAD MORE</span><span class="separator"></span><i class="fas fa-undo-alt"></i></button>
+            <div class="items" id="productsTmpl" style="display: none;">
+                <div class="item productTmpl">
+                    <div class="img" id="item-10" style="background-image: url(${imageURL});"></div>
+                    <h4>
+                        ${name}
+                    </h4>
+                    <span>
+                        ${price}
+                    </span>
+                    <div class="overlay">
+                        <button class="addToCart">
+                            <img src="./images/plus.png" alt="plus icon">
+                        </button>
+                        <button class="addToWishlist">
+                            <img src="./images/heart.png" alt="like icon">
+                        </button>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img" id="item-11" style="background-image: url(${imageURL});"></div>
+                    <h4>
+                        ${name}
+                    </h4>
+                    <span>
+                        ${price}
+                    </span>
+                    <div class="overlay">
+                        <button class="addToCart">
+                            <img src="./images/plus.png" alt="plus icon">
+                        </button>
+                        <button class="addToWishlist">
+                            <img src="./images/heart.png" alt="like icon">
+                        </button>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img" id="item-12" style="background-image: url(${imageURL});"></div>
+                    <h4>
+                        ${name}
+                    </h4>
+                    <span>
+                        ${price}
+                    </span>
+                    <div class="overlay">
+                        <button class="addToCart">
+                            <img src="./images/plus.png" alt="plus icon">
+                        </button>
+                        <button class="addToWishlist">
+                            <img src="./images/heart.png" alt="like icon">
+                        </button>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img" id="item-13" style="background-image: url(${imageURL});"></div>
+                    <h4>
+                        ${name}
+                    </h4>
+                    <span>
+                        ${price}
+                    </span>
+                    <div class="overlay">
+                        <button class="addToCart">
+                            <img src="./images/plus.png" alt="plus icon">
+                        </button>
+                        <button class="addToWishlist">
+                            <img src="./images/heart.png" alt="like icon">
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <button id="loadMore"><span>LOAD MORE</span><span class="separator"></span><i class="fas fa-undo-alt"></i></button>
         </div>
 
         <div class="banner">
@@ -381,6 +468,6 @@
         </div>
     </footer>
 
-    <script src="./script/script.js"></script>
+    <script src="./script/script.js" type="text/javascript"></script>
 </body>
 </html>
